--- a/Nhamalicious/Nhamalicious/Resources/layout/DialogLogIn.axml
+++ b/Nhamalicious/Nhamalicious/Resources/layout/DialogLogIn.axml
@@ -38,7 +38,7 @@
             android:text="LogIn!"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/btnLognInReal"
+            android:id="@+id/btnLogInReal"
             android:textSize="20dp"
             android:textColor="#fff"
             android:textStyle="bold"
