--- a/Nhamalicious/Nhamalicious/Resources/layout/DialogLogIn.axml
+++ b/Nhamalicious/Nhamalicious/Resources/layout/DialogLogIn.axml
@@ -5,30 +5,48 @@
     android:layout_height="fill_parent"
     android:minWidth="300dp"
     android:minHeight="400dp">
+    <CheckedTextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/checkedTextView1"
+        android:text="Username"
+        android:layout_marginTop="15dp"
+        android:layout_marginRight="0.0dp"
+        android:layout_marginLeft="160dp"
+        android:textColor="#000000" />
     <EditText
         android:id="@+id/txtUsername"
         android:layout_width="match_parent"
         android:layout_height="35dp"
         android:background="@drawable/edit_text_style"
+        android:hint="Username"
         android:layout_marginBottom="50dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:layout_marginTop="50dp"
-        android:hint="Username"
         android:paddingLeft="10dp"
-        android:textColor="#000" />
+        android:textColor="#000000" />
+    <CheckedTextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/checkedTextView2"
+        android:text="Password"
+        android:layout_marginTop="100dp"
+        android:layout_marginRight="0.0dp"
+        android:layout_marginLeft="160dp"
+        android:textColor="#000000" />
     <EditText
         android:inputType="textPassword"
         android:layout_width="match_parent"
         android:layout_height="35dp"
         android:id="@+id/txtPassword"
+        android:hint="Password"
         android:background="@drawable/edit_text_style"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:layout_below="@id/txtUsername"
-        android:hint="Password"
         android:paddingLeft="10dp"
-        android:textColor="#000" />
+        android:textColor="#000000" />
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
