--- a/Nhamalicious/Nhamalicious/Resources/layout/DialogPagRegisto.axml
+++ b/Nhamalicious/Nhamalicious/Resources/layout/DialogPagRegisto.axml
@@ -8,7 +8,7 @@
     android:id="@+id/relativeLayout1">
     <EditText
         android:id="@+id/txtNome"
-        android:layout_width="200dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="#F8EFF8F3"
         android:hint="Nome"
@@ -17,9 +17,9 @@
         android:padding="16dp" />
     <EditText
         android:id="@+id/txtUsername"
-        android:layout_width="180dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="5dp"
+        android:layout_marginTop="16dp"
         android:background="#F8EFF8F3"
         android:hint="Username"
         android:textColor="#333639"
