--- a/Nhamalicious/Nhamalicious/Resources/layout/DialogLogIn.axml
+++ b/Nhamalicious/Nhamalicious/Resources/layout/DialogLogIn.axml
@@ -1,72 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:background="#DEDEDC"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:minWidth="300dp"
-    android:minHeight="400dp">
-    <CheckedTextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/checkedTextView1"
-        android:text="Username"
-        android:layout_marginTop="15dp"
-        android:layout_marginRight="0.0dp"
-        android:layout_marginLeft="160dp"
-        android:textColor="#000000" />
+    android:minWidth="25px"
+    android:minHeight="25px"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:id="@+id/paglogin">
     <EditText
         android:id="@+id/txtUsername"
-        android:layout_width="match_parent"
-        android:layout_height="35dp"
-        android:background="@drawable/edit_text_style"
-        android:hint="Username"
-        android:layout_marginBottom="50dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="40dp"
         android:layout_marginTop="50dp"
-        android:paddingLeft="10dp"
-        android:textColor="#000000" />
-    <CheckedTextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/checkedTextView2"
-        android:text="Password"
-        android:layout_marginTop="100dp"
-        android:layout_marginRight="0.0dp"
-        android:layout_marginLeft="160dp"
-        android:textColor="#000000" />
+        android:background="#F8EFF8F3"
+        android:hint="Username"
+        android:textColor="#333639"
+        android:textColorHint="#333639"
+        android:padding="25dp" />
     <EditText
-        android:inputType="textPassword"
-        android:layout_width="match_parent"
-        android:layout_height="35dp"
         android:id="@+id/txtPassword"
-        android:hint="Password"
-        android:background="@drawable/edit_text_style"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_below="@id/txtUsername"
-        android:paddingLeft="10dp"
-        android:textColor="#000000" />
-    <RelativeLayout
-        android:layout_width="wrap_content"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:layout_below="@id/txtPassword"
-        android:layout_marginTop="50dp">
+        android:layout_marginLeft="40dp"
+        android:layout_marginTop="25dp"
+        android:layout_below="@+id/txtUsername"
+        android:background="#F8EFF8F3"
+        android:hint="Password"
+        android:textColor="#333639"
+        android:textColorHint="#333639"
+        android:padding="25dp" />
+    <RelativeLayout
+        android:layout_marginTop="16dp"
+        android:id="@+id/layoutBotoes"
+        android:layout_below="@+id/txtPassword"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:minWidth="25px"
+        android:minHeight="25px">
         <Button
-            android:text="LogIn!"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/btnLogInReal"
             android:textSize="20dp"
             android:textColor="#fff"
             android:textStyle="bold"
-            android:paddingLeft="5dp"
-            android:paddingBottom="5dp"
-            android:paddingRight="5dp"
-            android:height="70dp"
-            android:paddingTop="2dp"
+            android:id="@+id/btnLogin"
+            android:padding="16dp"
+            android:layout_marginTop="35dp"
+            android:layout_marginLeft="90dp"
+            android:text="Faça o Login!"
             android:background="@drawable/LogInStyle"
-            android:layout_centerHorizontal="true"
-            android:layout_marginLeft="30dp" />
+            android:layout_width="200dp"
+            android:layout_height="wrap_content" />
     </RelativeLayout>
 </RelativeLayout>
