--- a/Nhamalicious/Nhamalicious/Resources/layout/PagInicial.axml
+++ b/Nhamalicious/Nhamalicious/Resources/layout/PagInicial.axml
@@ -4,30 +4,31 @@
     android:minWidth="25px"
     android:minHeight="25px"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:id="@+id/paglogin">
     <EditText
         android:id="@+id/txtInserePrato"
         android:layout_width="200dp"
+        android:layout_below="@+id/txtEscolherCozinha"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="15dp"
+        android:layout_marginLeft="30dp"
         android:layout_marginTop="50dp"
         android:background="#F8EFF8F3"
         android:hint="Insira um prato"
-        android:textColor="#333639"
         android:textColorHint="#333639"
-        android:padding="25dp" />
-    <Button
-        android:textSize="15dp"
-        android:textColor="#fff"
-        android:textStyle="bold"
-        android:id="@+id/btnPesquisa"
-        android:text="Pesquisar"
-        android:layout_marginLeft="8dp"
+        android:padding="25dp"
+        android:gravity="center" />
+    <ImageButton
+        android:layout_width="45.0dp"
+        android:layout_height="49.5dp"
+        android:layout_marginTop="55dp"
         android:layout_toRightOf="@+id/txtInserePrato"
-        android:layout_width="140dp"
-        android:background="@drawable/LogInStyle"
-        android:layout_height="wrap_content" />
+        android:layout_marginLeft="50dip"
+        android:adjustViewBounds="true"
+        android:padding="2dp"
+        android:scaleType="fitCenter"
+        android:id="@+id/btnPesquisa"
+        android:src="@drawable/pesquisaIcon" />
     <RelativeLayout
         android:layout_marginTop="16dp"
         android:layout_below="@+id/txtInserePrato"
@@ -35,17 +36,73 @@
         android:layout_height="wrap_content"
         android:minWidth="25px"
         android:minHeight="25px">
-        <Button
-            android:textSize="20dp"
-            android:textColor="#fff"
+        <TextView
+            android:text="Ou escolha um tipo de cozinha:"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:layout_width="match_parent"
+            android:layout_marginTop="25dp"
+            android:layout_height="wrap_content"
+            android:textColor="#006400"
+            android:id="@+id/txtEscolherCozinha"
+            android:gravity="center"
             android:textStyle="bold"
-            android:id="@+id/btnLogin"
-            android:padding="16dp"
-            android:layout_marginTop="35dp"
-            android:layout_marginLeft="90dp"
-            android:text="Faça o Login!"
-            android:background="@drawable/LogInStyle"
-            android:layout_width="200dp"
-            android:layout_height="wrap_content" />
+            android:textSize="25sp" />
+        <RelativeLayout
+            android:layout_marginTop="16dp"
+            android:layout_below="@+id/txtEscolherCozinha"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <Button
+                android:textSize="20dp"
+                android:textColor="#fff"
+                android:textStyle="bold"
+                android:id="@+id/btnCozinhaVegan"
+                android:padding="16dp"
+                android:gravity="center"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="16dp"
+                android:text="Cozinha Vegan"
+                android:layout_width="250dp"
+                android:layout_height="wrap_content" />
+            <Button
+                android:textSize="20dp"
+                android:textColor="#fff"
+                android:textStyle="bold"
+                android:id="@+id/btnCozinhaIndiana"
+                android:layout_below="@+id/btnCozinhaVegan"
+                android:padding="16dp"
+                android:gravity="center"
+                android:layout_marginTop="10dp"
+                android:layout_centerHorizontal="true"
+                android:text="Cozinha Indiana"
+                android:layout_width="250dp"
+                android:layout_height="wrap_content" />
+            <Button
+                android:textSize="20dp"
+                android:textColor="#fff"
+                android:textStyle="bold"
+                android:id="@+id/btnCozinhaJaponesa"
+                android:layout_below="@+id/btnCozinhaIndiana"
+                android:padding="16dp"
+                android:gravity="center"
+                android:layout_marginTop="10dp"
+                android:layout_centerHorizontal="true"
+                android:text="Cozinha Japonesa"
+                android:layout_width="250dp"
+                android:layout_height="wrap_content" />
+            <Button
+                android:textSize="20dp"
+                android:textColor="#fff"
+                android:textStyle="bold"
+                android:id="@+id/btnCozinhaChinesa"
+                android:padding="16dp"
+                android:layout_below="@+id/btnCozinhaJaponesa"
+                android:gravity="center"
+                android:layout_marginTop="10dp"
+                android:layout_centerHorizontal="true"
+                android:text="Cozinha Chinesa"
+                android:layout_width="250dp"
+                android:layout_height="wrap_content" />
+        </RelativeLayout>
     </RelativeLayout>
 </RelativeLayout>
