--- a/Nhamalicious/Nhamalicious/Resources/layout/DialogLogIn.axml
+++ b/Nhamalicious/Nhamalicious/Resources/layout/DialogLogIn.axml
@@ -8,9 +8,9 @@
     android:id="@+id/paglogin">
     <EditText
         android:id="@+id/txtUsername"
-        android:layout_width="300dp"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="40dp"
+        android:layout_width="250dp"
+        android:layout_height="70dp"
+        android:layout_marginLeft="20dp"
         android:layout_marginTop="50dp"
         android:background="#F8EFF8F3"
         android:hint="Username"
@@ -19,9 +19,9 @@
         android:padding="25dp" />
     <EditText
         android:id="@+id/txtPassword"
-        android:layout_width="300dp"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="40dp"
+        android:layout_width="250dp"
+        android:layout_height="70dp"
+        android:layout_marginLeft="20dp"
         android:layout_marginTop="25dp"
         android:layout_below="@+id/txtUsername"
         android:background="#F8EFF8F3"
@@ -44,7 +44,7 @@
             android:id="@+id/btnLogin"
             android:padding="16dp"
             android:layout_marginTop="35dp"
-            android:layout_marginLeft="90dp"
+            android:layout_marginLeft="40dp"
             android:text="Faça o Login!"
             android:background="@drawable/LogInStyle"
             android:layout_width="200dp"
