--- a/Nhamalicious/Nhamalicious/Resources/layout/DialogPagRegisto.axml
+++ b/Nhamalicious/Nhamalicious/Resources/layout/DialogPagRegisto.axml
@@ -8,7 +8,9 @@
     android:id="@+id/pagregisto">
     <EditText
         android:id="@+id/txtNome"
-        android:layout_width="300dp"
+        android:layout_width="180dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="16dp"
         android:layout_height="wrap_content"
         android:background="#F8EFF8F3"
         android:hint="Nome"
@@ -17,9 +19,11 @@
         android:padding="16dp" />
     <EditText
         android:id="@+id/txtIdade"
-        android:layout_width="180dp"
+        android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:layout_marginLeft="5dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginTop="16dp"
         android:layout_toRightOf="@+id/txtNome"
         android:background="#F8EFF8F3"
         android:hint="Idade"
@@ -31,6 +35,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
         android:background="#F8EFF8F3"
         android:hint="Username"
         android:textColor="#333639"
@@ -42,6 +48,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
         android:background="#F8EFF8F3"
         android:hint="Email"
         android:textColor="#333639"
@@ -53,6 +61,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
         android:gravity="top"
         android:background="#F8EFF8F3"
         android:hint="Password"
@@ -65,6 +75,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
         android:gravity="top"
         android:background="#F8EFF8F3"
         android:hint="Confirmar Password"
@@ -84,7 +96,7 @@
         <RadioGroup
             android:minWidth="25px"
             android:minHeight="25px"
-            android:layout_marginLeft="100dp"
+            android:layout_marginLeft="60dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/radioGroup1">
@@ -112,8 +124,8 @@
             android:textStyle="bold"
             android:id="@+id/btnRegisto"
             android:padding="16dp"
-            android:layout_marginTop="35dp"
-            android:layout_marginLeft="90dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="40dp"
             android:text="Registe-se!"
             android:background="@drawable/LogInStyle"
             android:layout_width="200dp"
