--- a/Nhamalicious/Nhamalicious/Resources/layout/PagInicial.axml
+++ b/Nhamalicious/Nhamalicious/Resources/layout/PagInicial.axml
@@ -111,7 +111,7 @@
                 android:layout_below="@+id/btnCozinhaChinesa"
                 android:layout_marginRight="16dp"
                 android:padding="16dp"
-                android:text="Resgito/Login"
+                android:text="Registo/Login"
                 android:background="@drawable/LogInStyle"
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
