Versão Funcional Com Página de Pesquisa Aldrabada

--- a/Nhamalicious/Nhamalicious/Resources/layout/DialogPagRegisto.axml
+++ b/Nhamalicious/Nhamalicious/Resources/layout/DialogPagRegisto.axml
@@ -63,6 +63,7 @@
         android:layout_marginTop="16dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
+        android:inputType="textPassword"
         android:gravity="top"
         android:background="#F8EFF8F3"
         android:hint="Password"
@@ -78,6 +79,7 @@
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:gravity="top"
+        android:inputType="textPassword"
         android:background="#F8EFF8F3"
         android:hint="Confirmar Password"
         android:textColor="#333639"
