--- a/Nhamalicious/Nhamalicious/Resources/layout/Main.axml
+++ b/Nhamalicious/Nhamalicious/Resources/layout/Main.axml
@@ -3,7 +3,7 @@
     android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:background="@android:color/background_light"
+    android:background="#DEDEDC"
     android:weightSum="100"
     android:minWidth="25px"
     android:minHeight="25px">
